--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -57,7 +57,7 @@
     <div>
         Select Run Period: <select id="RunPeriod" name="RunPeriod" onChange="PopulateVersionSelector();SetRunRange();ShowPlots()"></select>
         Select Version: <select id="Version" name="Version" onChange="PopulateImagesSelector();first_showing=true;ShowPlots()"></select><br>
-        Plot to Display: <select id="Plot" name="Plot" onChange="ShowPlots()"></select>Toggle plot order<input type="button" onclick="toggleDisplayOrder();"/>    columns: <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
+        Plot to Display: <select id="Plot" name="Plot" onChange="ShowPlots()"></select>Togggle plot order<input type="button" onclick="toggleDisplayOrder();"/>    columns: <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
         Run Range: <input type="number" id="minRunNum" name="minRunNum" size="20" onChange="ShowPlots()"/>-<input type="number" id="maxRunNum" name="maxRunNum" size="20" onChange="ShowPlots()"/><br>
         Query: <input type="text" id="rcdb_query" name="rcdb_query" size="40" />
         <input type="button" value="Query" onclick="ShowWaitIcon();DoQuery();">  <img id="wait_icon" name="wait_icon" src="./hourglass.png">
@@ -296,8 +296,9 @@ function QueryFiles() {
     if (this.readyState == 4 && this.status == 200) {
       result = JSON.parse(this.responseText);
       fileResult = result;
-      console.log("rcdb_browser");  // added on 17-Dec-2019
+      console.log("rcdb_browser 0");  // added on 17-Dec-2019
       console.log(result);
+      console.log("rcdb_browser 1");  // added on 17-Dec-2019
       for (var i = 0; i < result.length; i++) {
         if (result[i].RunPeriod === "calibrations") {
           result.splice(i, 1);
@@ -315,8 +316,8 @@ function QueryFiles() {
     }
   };
 
-  console.log("js_utilities/rcdb_browser.php");
-  xmlhttp.open("GET", "js_utilities/rcdb_browser.php", true);
+  console.log("js_utilities/t.php");
+  xmlhttp.open("GET", "js_utilities/t.php", true);
   xmlhttp.send();
 }
 
