--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -292,7 +292,7 @@ function QueryFiles() {
           break
         }
       }
-      PopulateRunPeriodSelector();
+      PopulateRunPeriodSelector2();
       PopulateVersionSelector();
       PopulateImagesSelector();
       SetRunRange();
@@ -414,6 +414,35 @@ function PopulateRunPeriodSelector() {
     }
     // console.log(fileResult[i]["RunPeriod"]);
   }
+}
+
+function PopulateRunPeriodSelector2() {
+  var qresult = new Array;
+  if (window.XMLHttpRequest) {
+    // code for IE7+, Firefox, Chrome, Opera, Safari
+    xmlhttp = new XMLHttpRequest();
+  } else {
+    // code for IE6, IE5
+    xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+  }
+  xmlhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+      var result = JSON.parse(this.responseText);
+
+      for (var i = 0; i < result.length; i++) {
+        var newoption   = document.createElement("option");
+        newoption.text  = result[i]['Name'] + '2';
+        newoption.value = result[i]['Name'];
+        newoption.id    = result[i]['Name'];
+        document.getElementById("RunPeriod").add(newoption);
+        if (i == result.length - 1) {
+          newoption.selected = true;
+        }
+      }
+    }
+  }
+  xmlhttp.open("GET", "js_utilities/populate_runperiod_selector2.php", true);
+  xmlhttp.send();
 }
 
 function PopulateVersionSelector() {
