--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -151,7 +151,7 @@ function DoQuery() {
       query_result=this.responseText.split("_");
       // var result_to_use = JSON.parse(this.responseText);
       // console.log(result_to_use);
-      console.log(query_result)
+      console.log(query_result);
       HideWaitIcon();
       // QueryXref();
       ShowPlots();
@@ -292,7 +292,7 @@ function QueryFiles() {
           break
         }
       }
-      PopulateRunPeriodSelector2();
+      PopulateRunPeriodSelector();
       PopulateVersionSelector();
       PopulateImagesSelector();
       SetRunRange();
@@ -385,7 +385,7 @@ function SetRunRange() {
       }
     }
   } else {
-    if (SelectedRunListOBJ.length!=0) {
+    if (SelectedRunListOBJ.length != 0) {
       var numsList = SelectedRunListOBJ.map(e=>parseInt(e.split("Run")[1]))
 
       console.log(numsList)
@@ -400,19 +400,15 @@ function SetRunRange() {
 }
 
 function PopulateRunPeriodSelector() {
-
-  var URL_Runp = ""
-
   for (var i = 0; i < fileResult.length; i++) {
-    var newoption = document.createElement("option");
-    newoption.text = fileResult[i]["RunPeriod"];
+    var newoption   = document.createElement("option");
+    newoption.text  = fileResult[i]["RunPeriod"];
     newoption.value = fileResult[i]["RunPeriod"];
-    newoption.id = fileResult[i]["RunPeriod"];
+    newoption.id    = fileResult[i]["RunPeriod"];
     document.getElementById("RunPeriod").add(newoption);
     if (i == fileResult.length - 1) {
       newoption.selected = true;
     }
-    // console.log(fileResult[i]["RunPeriod"]);
   }
 }
 
@@ -428,10 +424,9 @@ function PopulateRunPeriodSelector2() {
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
       var result = JSON.parse(this.responseText);
-
       for (var i = 0; i < result.length; i++) {
         var newoption   = document.createElement("option");
-        newoption.text  = result[i]['Name'] + '2';
+        newoption.text  = result[i]['Name'];
         newoption.value = result[i]['Name'];
         newoption.id    = result[i]['Name'];
         document.getElementById("RunPeriod").add(newoption);
@@ -441,7 +436,7 @@ function PopulateRunPeriodSelector2() {
       }
     }
   }
-  xmlhttp.open("GET", "js_utilities/populate_runperiod_selector2.php", true);
+  xmlhttp.open("GET", "js_utilities/populate_runperiod_selector2.php", false);
   xmlhttp.send();
 }
 
