--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -273,9 +273,13 @@ function SetRunListOBJ() {
     if (this.readyState == 4 && this.status == 200) {
       var result = JSON.parse(this.responseText);
       SelectedRunListOBJ = [];
+      int_run_list = [];
       for (var i = 0; i < result.length; i++) {
         SelectedRunListOBJ.push('Run' + ('000000' + result[i]['RunNumber']).slice(-6));
+        int_run_list.push(parseInt(result[i]['RunNumber']));
       }
+      document.getElementById("minRunNum").value = int_run_list.min();
+      document.getElementById("maxRunNum").value = int_run_list.max();
     }
   }
   xmlhttp.open("GET", "js_utilities/set_run_list_obj.php?ID=" + document.getElementById("Version").options[document.getElementById("Version").selectedIndex].id, false);
@@ -315,10 +319,7 @@ function SetOptionsFromURL() {
 }
 
 function SetRunRange() {
-  SetRunListOBJ();
-
   currentURL_split = document.URL.split("?");
-
   if (currentURL_split.length == 2) {
     URL_AND_split = currentURL_split[1].split("&");
     console.log(URL_AND_split);
@@ -329,18 +330,6 @@ function SetRunRange() {
       } else if (opt[0] == "maxRunNum") {
         document.getElementById("maxRunNum").value = opt[1];
       }
-    }
-  } else {
-    if (SelectedRunListOBJ.length != 0) {
-      var numsList = SelectedRunListOBJ.map(e=>parseInt(e.split("Run")[1]));
-
-      console.log(numsList);
-
-      document.getElementById("minRunNum").value = numsList.min();
-      document.getElementById("maxRunNum").value = numsList.max();
-    } else {
-      document.getElementById("minRunNum").value = 0;
-      document.getElementById("maxRunNum").value = 100000;
     }
   }
 }
