--- a/Plot_Browser.html
+++ b/Plot_Browser.html
@@ -53,8 +53,8 @@
 
   <body onresize="ShowPlots()">
     <div>
-      Select Run Period: <select id="RunPeriod" name="RunPeriod" onChange="PopulateVersionSelector();SetRunRange();ShowPlots()"></select>
-      Select Version: <select id="Version" name="Version" onChange="PopulateImagesSelector();first_showing=true;ShowPlots()"></select><br>
+      Select Run Period: <select id="RunPeriod" name="RunPeriod" onChange="PopulateVersionSelector()"></select>
+      Select Version: <select id="Version" name="Version" onChange="PopulateImagesSelector()"></select><br>
       Plot to Display: <select id="Plot" name="Plot" onChange="ShowPlots()"></select>Toggle plot order<input type="button" onclick="toggleDisplayOrder();"/>    columns: <select id="Columns" name="Columns" onChange="ShowPlots()"></select><br>
       Run Range: <input type="number" id="minRunNum" name="minRunNum" size="20" onChange="ShowPlots()"/>-<input type="number" id="maxRunNum" name="maxRunNum" size="20" onChange="ShowPlots()"/><br>
       Query: <input type="text" id="rcdb_query" name="rcdb_query" size="40" />
